--- a/index.htm
+++ b/index.htm
@@ -1,18 +1,6 @@
-<HTML>
-  <HEAD TITLE="Chris Quick">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head title="Chris Quick"></head>
+  <body>
+    <h1>Chris&nbsp;</h1>
 
-  </HEAD>
-
-  <BODY>
-    <H1>Chris Quick</H1>
-
-    <A HREF="https://66.36.228.53:19638/webhost/services/winvirtualhosting/siteadmin">DeelTech.com Admin</A>  <P>
-
-    <A HREF="http://deeltech.com/mewebmail" > DeelTech.com Web Mail </A><BR>
-
-    <A HREF=" " >  </A>
-    <A HREF=" " >  </A>
-    <A HREF=" " >  </A>
-    <A HREF=" " >  </A>
-  </BODY>
-</HTML>
+    <a href="https://66.36.228.53:19638/webhost/services/winvirtualhosting/siteadmin"></a><br></body></html>
