--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,46 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head title="Chris Quick"></head>
-  <body>
-    <h1>Chris&nbsp;</h1>
+<body>
+    <p class="LO-normal" style="text-align: center; font-family: Helvetica,Arial,sans-serif;" align="center"><b style=""><span style="font-size: 18pt;">Christopher G. Deel</span></b><b style=""><span style="font-size: 11pt;"><o:p></o:p></span></b></p>
 
-    <a href="https://66.36.228.53:19638/webhost/services/winvirtualhosting/siteadmin"></a><br></body></html>
+<p class="LO-normal" style="text-align: center; font-family: Helvetica,Arial,sans-serif;" align="center"><b style=""><span style="font-size: 11pt;">Chris@DeelTech.com</span></b><o:p></o:p></p>
+
+
+    
+
+<h1 style="font-family: Helvetica,Arial,sans-serif;">Professional Summary<o:p></o:p></h1>
+
+<p style="font-family: Helvetica,Arial,sans-serif;" class="MsoNormal">Highly experienced Senior Software Engineer with 20+ years
+in embedded systems development, hardware/software integration, and application
+design. Proficient in a variety of programming languages and technologies, with
+a strong background in developing software for complex systems. Proven ability
+to lead projects from conception to completion while collaborating with
+cross-functional teams.&nbsp;<o:p></o:p></p>
+
+<h1 style="font-family: Helvetica,Arial,sans-serif;">Skills<o:p></o:p></h1>
+
+<ul><li style="font-family: Helvetica,Arial,sans-serif;"><!--[if !supportLists]--><span style=""><span style="font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">
+</span></span><!--[endif]--><b>Programming Languages:</b> C/C++, C#, Java,
+Python, PHP, Assembly code for multiple processors (80x86, 8051, ARM, DSP,
+68000, Z80, AVR, PIC)<o:p></o:p></li><li style="font-family: Helvetica,Arial,sans-serif;"><!--[if !supportLists]--><span style=""><span style="font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">
+</span></span><!--[endif]--><b>Frameworks &amp; APIs:</b> .NET (Winforms,
+WPF), MFC, Win32 API, DirectX, OpenGL, Arduino<o:p></o:p></li><li style="font-family: Helvetica,Arial,sans-serif;"><!--[if !supportLists]--><span style=""><span style="font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">
+</span></span><!--[endif]--><b>Tools &amp; Platforms:</b> Git, CMake,
+LabVIEW<o:p></o:p></li><li style="font-family: Helvetica,Arial,sans-serif;"><!--[if !supportLists]--><span style=""><span style="font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">
+</span></span><!--[endif]--><b>Operating Systems:</b> Windows, Linux<o:p></o:p></li><li style="font-family: Helvetica,Arial,sans-serif;"><!--[if !supportLists]--><span style=""><span style="font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">
+</span></span><!--[endif]--><b>Protocols &amp; Standards:</b> TCP/IP, UDP,
+MIL-STD-1553, ARINC, Bluetooth, RS232<o:p></o:p></li><li><!--[if !supportLists]--><span style="font-family: Helvetica,Arial,sans-serif;"><span style=""><span style="font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">
+</span></span></span><!--[endif]--><b style="font-family: Helvetica,Arial,sans-serif;">Hardware &amp; Electronics:</b><span style="font-family: Helvetica,Arial,sans-serif;"> Embedded
+Systems Development, Hardware/Software Integration, Digital Electronics, A/D
+&amp; D/A Converters, Microprocessors, FPGAs</span><span style="font-family: &quot;New York&quot;,sans-serif;"><o:p></o:p></span></li></ul>
+
+
+
+
+
+
+
+
+
+
+</body></html>
